# qxtglobalshortcut

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: library.cmake  pkg-config.cmake  platform.cmake  platform_mac.cmake  platform_win.cmake  platform_x11.cmake  qt.cmake  qt4.cmake  qt5.cmake  qxtglobalshortcutConfig.cmake
example/: CMakeLists.txt
example-qt4/: CMakeLists.txt
example-qt4/src/: main.cpp
example/src/: main.cpp
src/: qxtglobalshortcut.cpp  qxtglobalshortcut.h  qxtglobalshortcut_mac.cpp  qxtglobalshortcut_p.h  qxtglobalshortcut_x11.cpp
utils/appveyor/: after_build.bat  before_build.bat  build_script.bat
utils/travis/: install-linux.sh  script-linux.sh  script-osx.sh
